still trying to get convertFileToString() to work